# rrecai

./: .gitignore  README.md  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts
dev/data/: message.json
src-tauri/: Cargo.toml  tauri.conf.json  test.db
src-tauri/myicons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: config.rs  draft.rs  mod.rs  rrecai.rs
src-tauri/src/core/: handle.rs  logger.rs  mod.rs  service.rs
src-tauri/src/dbcontroller/: dbservice.rs  mod.rs  model.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  mdirs.rs  mod.rs
src/app/: globals.css  page.tsx
src/app/about/: layout.tsx  page.tsx
src/communicate/: aisettings.ts  eventemit.ts  usermessage.ts
src/components/: chatbubble.tsx  chatinput.tsx  components.tsx  expandableBbutton.tsx  greet.tsx  navbartitle.tsx  searchtextbox.tsx  sidebar.tsx  themecontroller.tsx
src/lib/: mock.ts  util.ts
