[package]
name = "rrecai"
version = "0.1.0"
description = "rrecai is an application for managing your reacords and reorganizing your records"
authors = ["Unic"]
license = "MIT"
repository = "https://github.com/YuniqueUnic/rrecai.git"
default-run = "rrecai"
edition = "2021"
build = "build.rs"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [ "shell-all", "window-all", "path-all", "fs-read-file", "fs-exists", "clipboard-all"] }
anyhow = "1.0.86"
dirs = "5.0.1"
tokio = { version = "1.38.0", features = ["full"] }
dunce = "1.0.4"
log = "0.4.21"
parking_lot = "0.12.3"
once_cell = "1.19.0"
chrono = "0.4.38"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
